--- a/views/guestbook.pug
+++ b/views/guestbook.pug
@@ -16,26 +16,29 @@ html(lang="en")
                 each message in messages
                     .message
                         .time #{message.time.toUTCString()}
-                        .name #{message.name}
-                        if message.email
-                            a.email(href=`mailto:${message.email}`) #{message.email}
+                        .name-email
+                            .name #{message.name}
+                            if message.email
+                                a.email(href=`mailto:${message.email}`) #{message.email}
                         .content #{message.content}
 
             form#new-msg-form
-                label.labels(for="form-name") Name:
-                input(type="text" id="form-name" name="name")
-                label.labels(for="form-email") Email:
-                input(type="text" id="form-email" name="email")
-                label.labels(for="form-privacy" title="")
-                    abbr#private-hint(title="Private messages will not be displayed here") Private:
-                input.radios(type="radio" id="form-true" name="privacy")
-                label.private-labels(for="form-true") Yes
-                input.radios(type="radio" id="form-false" name="privacy" checked)
-                label.private-labels(for="form-false") No
+                #form-line
+                    label.labels(for="form-name") Name:
+                    input(type="text" id="form-name" name="name")
+                #form-line
+                    label.labels(for="form-email") Email:
+                    input(type="text" id="form-email" name="email")
+                #form-line
+                    label.labels(for="form-privacy" title="")
+                        abbr#private-hint(title="Private messages will not be displayed here") Private:
+                    input.radios(type="radio" id="form-true" name="privacy")
+                    label.private-labels(for="form-true") Yes
+                    input.radios(type="radio" id="form-false" name="privacy" checked)
+                    label.private-labels(for="form-false") No
                 input(type="button" id="button" value="Send" onclick="sendMessage()")
-                br
                 label.labels(for="form-message" id="form-msg-label") Message:
-                textarea(id="form-message" name="content" rows="5" cols="95" maxlength="500")
+                textarea(id="form-message" name="content" maxlength="500")
 
         script(src=`/js/guestbook.js`)
         script.
